--- a/kubernetes/apps/security/cert-manager/app/externalsecret.yaml
+++ b/kubernetes/apps/security/cert-manager/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cert-manager-cloudflare
+  name: cloudflare-issuer
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: cert-manager-cloudflare-secret
+    name: cloudflare-issuer-secret
     template:
       data:
         CLOUDFLARE_API_TOKEN: "{{ .CLOUDFLARE_API_TOKEN }}"
