--- a/kubernetes/apps/flux-system/flux-instance/app/prometheusrule.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/prometheusrule.yaml
@@ -3,27 +3,28 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: flux-instance
+  name: flux-instance-rules
+  namespace: flux-system
 spec:
   groups:
     - name: flux-instance.rules
       rules:
         - alert: FluxInstanceAbsent
-          annotations:
-            summary: >-
-              Flux instance metric is missing
           expr: |-
             absent(flux_instance_info{exported_namespace="flux-system", name="flux"})
           for: 5m
+          annotations:
+            summary: >-
+              Flux instance metric is missing
           labels:
             severity: critical
 
         - alert: FluxInstanceNotReady
-          annotations:
-            summary: >-
-              Flux instance {{ $labels.name }} is not ready
           expr: |-
             flux_instance_info{exported_namespace="flux-system", name="flux", ready!="True"}
           for: 5m
+          annotations:
+            summary: >-
+              Flux instance {{ $labels.name }} is not ready
           labels:
             severity: critical
