--- a/kubernetes/apps/kube-system/cilium/app/networks.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networks.yaml
@@ -3,11 +3,11 @@
 apiVersion: cilium.io/v2
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: bgp-pool
+  name: lb-pool
 spec:
-  allowFirstLastIPs: "Yes"
+  allowFirstLastIPs: "No"
   blocks:
-    - cidr: 192.168.20.32/27
+    - cidr: 192.168.20.0/24
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
 apiVersion: cilium.io/v2alpha1
@@ -16,8 +16,9 @@ metadata:
   name: l2-policy
 spec:
   loadBalancerIPs: true
-  # Note: Devices might need to be set if more than one active NIC exists on the hosts.
-  interfaces: ["eth0"]
+  # TODO: Change interfaces to 'bond0' prior to single node cluster deployment.
+  interfaces:
+    - eth0
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
@@ -26,23 +27,37 @@ spec:
 apiVersion: cilium.io/v2
 kind: CiliumBGPAdvertisement
 metadata:
-  name: l3-bgp-advertisement
+  name: bgp-advertisement-config
   labels:
     advertise: bgp
 spec:
   advertisements:
     - advertisementType: Service
       service:
-        addresses: ["LoadBalancerIP"]
+        addresses:
+          - LoadBalancerIP
       selector:
         matchExpressions:
           - { key: somekey, operator: NotIn, values: ["never-used-value"] }
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgppeerconfig_v2.json
+apiVersion: cilium.io/v2
+kind: CiliumBGPPeerConfig
+metadata:
+  name: bgp-peer-config-v4
+spec:
+  families:
+    - afi: ipv4
+      safi: unicast
+      advertisements:
+        matchLabels:
+          advertise: bgp
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgpclusterconfig_v2.json
 apiVersion: cilium.io/v2
 kind: CiliumBGPClusterConfig
 metadata:
-  name: l3-bgp-cluster-config
+  name: bgp-cluster-config
 spec:
   nodeSelector:
     matchLabels:
@@ -51,21 +66,8 @@ spec:
     - name: cilium
       localASN: 64514
       peers:
-        - name: gateway
+        - name: unifi
           peerASN: 64513
-          peerAddress: 192.168.20.1
+          peerAddress: 192.168.1.1
           peerConfigRef:
-            name: l3-bgp-peer-config
----
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgppeerconfig_v2.json
-apiVersion: cilium.io/v2
-kind: CiliumBGPPeerConfig
-metadata:
-  name: l3-bgp-peer-config
-spec:
-  families:
-    - afi: ipv4
-      safi: unicast
-      advertisements:
-        matchLabels:
-          advertise: bgp
+            name: bgp-peer-config-v4
