--- a/kubernetes/apps/security/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/security/cert-manager/app/kustomization.yaml
@@ -6,10 +6,5 @@ resources:
   - ./clusterissuer.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./ocirepository.yaml
   - ./prometheusrule.yaml
-configMapGenerator:
-  - name: cert-manager-values
-    files:
-      - values.yaml=./helm/values.yaml
-configurations:
-  - ./helm/kustomizeconfig.yaml
