--- a/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/app/helmrelease.yaml
@@ -34,6 +34,8 @@ spec:
         enabled: true
         interval: 1m
     grafanaDashboard:
+      annotations:
+        grafana_folder: Security
       enabled: true
     resources:
       requests:
