--- a/kubernetes/apps/network/external-dns/cloudflare/prometheusrule.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/prometheusrule.yaml
@@ -3,17 +3,17 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: external-dns
+  name: external-dns-rules
 spec:
   groups:
     - name: external-dns.rules
       rules:
         - alert: ExternalDNSStale
-          annotations:
-            summary: >-
-              ExternalDNS {{ $labels.job }} has not synced successfully in the last five minutes
           expr: |-
             time() - external_dns_controller_last_sync_timestamp_seconds > 60
           for: 5m
+          annotations:
+            summary: >-
+              ExternalDNS ({{ $labels.job }}) has not synced successfully in the last five minutes
           labels:
             severity: critical
