--- a/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
+++ b/kubernetes/apps/network/external-dns/cloudflare/helmrelease.yaml
@@ -1,23 +1,4 @@
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
-metadata:
-  name: external-dns
-spec:
-  interval: 5m
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 1.18.0
-  url: oci://ghcr.io/home-operations/charts-mirror/external-dns
-  verify:
-    provider: cosign
-    matchOIDCIdentity:
-      - issuer: "^https://token.actions.githubusercontent.com$"
-        subject: "^https://github.com/home-operations/charts-mirror.*$"
----
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -27,7 +8,7 @@ spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: external-dns
+    name: external-dns-cloudflare
   install:
     remediation:
       retries: -1
