--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -1,18 +1,4 @@
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: OCIRepository
-metadata:
-  name: democratic-csi
-spec:
-  interval: 5m
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 0.15.0
-  url: oci://ghcr.io/democratic-csi/charts/democratic-csi
----
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -22,7 +8,7 @@ spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: democratic-csi
+    name: democratic-csi-iscsi
   install:
     remediation:
       retries: -1
