chore(renovate): modify managerFilePatterns

--- a/.renovate/customManagers.json5
+++ b/.renovate/customManagers.json5
@@ -4,10 +4,7 @@
     {
       customType: "regex",
       description: "Process annotated dependencies",
-      managerFilePatterns: [
-        "/(^|/).+\\.sh$/",
-        "/(^|/).+\\.ya?ml(?:\\.j2)?$/",
-      ],
+      managerFilePatterns: ["/\\.yaml(?:\\.j2)?$/"],
       matchStrings: [
         // # renovate: datasource=github-releases depName=k3s-io/k3s
         // k3s_release_version: &version v1.29.0+k3s1
