--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -3,25 +3,27 @@
   packageRules: [
     {
       description: "1Password Connect Group",
-      groupName: "1Password Connect",
+      groupName: "1password-connect",
       matchDatasources: ["docker"],
       matchPackageNames: ["/1password/"],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
+      minimumGroupSize: 2,
     },
     {
       description: "Actions Runner Controller Group",
-      groupName: "Actions Runner Controller",
+      groupName: "actions-runner-controller",
       matchDatasources: ["docker"],
       matchPackageNames: ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
+      minimumGroupSize: 2,
     },
     {
       description: "Barman Cloud Group",
-      groupName: "Barman Cloud",
+      groupName: "barman-cloud",
       matchDatasources: ["docker", "github-releases"],
       matchPackageNames: ["**/plugin-barman-cloud", "**/plugin-barman-cloud-sidecar"],
       group: {
@@ -30,78 +32,52 @@
       minimumGroupSize: 2,
     },
     {
-      description: "Cert-Manager Group",
-      groupName: "Cert-Manager",
-      matchDatasources: ["docker"],
-      matchPackageNames: ["/cert-manager/"],
-      group: {
-        commitMessageTopic: "{{{groupName}}} group",
-      },
-    },
-    {
-      description: "Cilium Group",
-      groupName: "Cilium",
-      matchDatasources: ["docker"],
-      matchPackageNames: ["/cilium/"],
-      group: {
-        commitMessageTopic: "{{{groupName}}} group",
-      },
-    },
-    {
-      description: "CoreDNS Group",
-      groupName: "CoreDNS",
-      matchDatasources: ["docker"],
-      matchPackageNames: ["/coredns/"],
-      group: {
-        commitMessageTopic: "{{{groupName}}} group",
-      },
-    },
-    {
-      description: "External Secrets Operator Group",
-      groupName: "External Secrets Operator",
-      matchDatasources: ["docker"],
-      matchPackageNames: ["/external-secrets/"],
-      group: {
-        commitMessageTopic: "{{{groupName}}} group",
-      },
-    },
-    {
       description: "Flux Operator Group",
-      groupName: "Flux Operator",
+      groupName: "flux-operator",
       matchDatasources: ["docker"],
       matchPackageNames: ["/flux-operator/", "/flux-instance/"],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
+      minimumGroupSize: 2,
     },
     {
       description: "Immich Group",
-      groupName: "Immich",
+      groupName: "immich",
       matchDatasources: ["docker"],
       matchPackageNames: ["**/immich-app/immich-server", "**/immich-app/immich-machine-learning"],
       group: {
         commitMessageTopic: "{{{groupName}}} group"
       },
       separateMinorPatch: true,
-      sourceUrl: "https://github.com/immich-app/immich"
+      sourceUrl: "https://github.com/immich-app/immich",
+      minimumGroupSize: 2,
     },
     {
-      description: "Spegel Group",
-      groupName: "Spegel",
+      description: "Kubernetes Group",
+      groupName: "kubernetes",
       matchDatasources: ["docker"],
-      matchPackageNames: ["/spegel/"],
+      matchPackageNames: [
+        "/kube-apiserver/",
+        "/kube-controller-manager/",
+        "/kube-proxy/",
+        "/kube-scheduler/",
+        "/kubelet/",
+      ],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
       },
+      minimumGroupSize: 5,
     },
     {
       description: "Talos Group",
-      groupName: "Talos",
+      groupName: "talos",
       matchDatasources: ["docker"],
-      matchPackageNames: ["/siderolabs/installer", "/siderolabs/talosctl"],
+      matchPackageNames: ["/installer/", "/talosctl/"],
       group: {
-        commitMessageTopic: "{{{groupName}}} group"
+        commitMessageTopic: "{{{groupName}}} group",
       },
+      minimumGroupSize: 2,
     },
   ],
 }
