--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -9,6 +9,7 @@
     "github>pwyde/home-ops//.renovate/grafanaDashboards.json5",
     "github>pwyde/home-ops//.renovate/groups.json5",
     "github>pwyde/home-ops//.renovate/labels.json5",
+    "github>onedr0p/home-ops//.renovate/overrides.json5",
     "github>pwyde/home-ops//.renovate/packageRules.json5",
     "github>pwyde/home-ops//.renovate/semanticCommits.json5",
     ":automergeBranch",
