--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -5,17 +5,19 @@ name: Label Sync
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
-    paths: [".github/labels.yaml"]
+    branches:
+      - main
+    paths:
+      - .github/labels.yaml
   schedule:
-    - cron: "0 0 * * *" # Every day at midnight.
+    - cron: 0 0 * * *
 
 permissions:
   contents: read
 
 jobs:
-  label-sync:
-    name: Sync Labels
+  main:
+    name: Label Sync - Sync Labels
     runs-on: ubuntu-latest
     permissions:
       contents: read
