--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -5,10 +5,12 @@ name: Schemas
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # Every day at midnight.
+    - cron: 0 0 * * *
   push:
-    branches: ["main"]
-    paths: [".github/workflows/schemas.yaml"]
+    branches:
+      - main
+    paths:
+      - .github/workflows/schemas.yaml
 
 env:
   UV_SYSTEM_PYTHON: "1"
@@ -17,7 +19,7 @@ permissions:
   contents: read
 
 jobs:
-  schemas:
+  main:
     name: Schemas
     runs-on: home-ops-runner
     permissions:
@@ -54,7 +56,7 @@ jobs:
       - name: Publish Schemas
         uses: cloudflare/wrangler-action@da0e0dfe58b7a431659754fdf3f186c529afbe65 # v3.14.1
         with:
-          apiToken: "${{ secrets.CLOUDFLARE_API_TOKEN }}"
-          accountId: "${{ secrets.CLOUDFLARE_ACCOUNT_ID }}"
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: /home/runner/.datree/crdSchemas
           command: pages deploy --project-name=home-kubernetes-schemas --branch main .
