--- a/kubernetes/apps/system/generic-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/system/generic-device-plugin/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
         annotations:
           configmap.reloader.stakater.com/reload: &configMap "{{ .Release.Name }}-configmap"
         containers:
-          generic-device-plugin:
+          app:
             image:
               repository: ghcr.io/squat/generic-device-plugin
               tag: 36bfc606bba2064de6ede0ff2764cbb52edff70d@sha256:ba6f0b4cf6c858d6ad29ba4d32e4da11638abbc7d96436bf04f582a97b2b8821
