feat: remove authentik deployment

--- a/kubernetes/apps/database/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/database/pgadmin/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
               PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "False"
             envFrom:
               - secretRef:
-                  name: &secret "{{ .Release.Name }}-secret"
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
@@ -84,13 +84,6 @@ spec:
         globalMounts:
           - path: /pgadmin4/servers.json
             subPath: servers.json
-            readOnly: true
-      oauth:
-        type: secret
-        name: *secret
-        globalMounts:
-          - path: /pgadmin4/config_local.py
-            subPath: config_local.py
             readOnly: true
       pgadmin:
         existingClaim: "{{ .Release.Name }}"
