--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -30,43 +30,22 @@ spec:
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
-      GF_SECURITY_DISABLE_INITIAL_ADMIN_CREATION: true
+      GF_SERVER_ROOT_URL: https://grafana.${SECRET_DOMAIN}
     envFromSecrets:
       - name: *secret
     admin:
       existingSecret: *secret
-      userKey: adminUser
-      passwordKey: adminPass
     grafana.ini:
       analytics:
         check_for_updates: false
         check_for_plugin_updates: false
         reporting_enabled: false
-      auth:
-        oauth_auto_login: true
-        signout_redirect_url: https://authentik.${SECRET_DOMAIN}/application/o/grafana/end-session/
-        oauth_allow_insecure_email_lookup: true
       auth.basic:
         enabled: false
       auth.anonymous:
         enabled: false
-      auth.generic_oauth:
-        enabled: true
-        name: ${SECRET_DOMAIN}
-        icon: signin
-        auth_url: https://authentik.${SECRET_DOMAIN}/application/o/authorize/
-        token_url: https://authentik.${SECRET_DOMAIN}/application/o/token/
-        api_url: https://authentik.${SECRET_DOMAIN}/application/o/userinfo/
-        scopes: openid profile email
-        use_pkce: true
-      auth.generic_oauth.group_mapping:
-        role_attribute_path: |
-          contains(groups[*], 'Infrastructure') && 'Admin' || 'Viewer'
-        org_id: 1
       news:
         news_feed_enabled: false
-      server:
-        root_url: https://grafana.${SECRET_DOMAIN}
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
@@ -298,11 +277,6 @@ spec:
           revision: 7
           datasource: Prometheus
       security:
-        authentik:
-          # renovate: depName="authentik"
-          gnetId: 14837
-          revision: 2
-          datasource: Prometheus
         cert-manager:
           url: https://raw.githubusercontent.com/pwyde/home-ops/main/kubernetes/apps/observability/grafana/app/resources/cert-manager.json
           datasource: Prometheus
