--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -19,10 +19,8 @@ spec:
         GF_DATABASE_USER: &dbUser "{{ .GRAFANA_POSTGRES_USER }}"
         GF_DATABASE_PASSWORD: &dbPass "{{ .GRAFANA_POSTGRES_PASSWORD }}"
         GF_DATABASE_SSL_MODE: disable
-        GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ .GRAFANA_OAUTH_CLIENT_ID }}"
-        GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
-        adminUser: "{{ .GRAFANA_ADMIN_USER }}"
-        adminPass: "{{ .GRAFANA_ADMIN_PASSWORD }}"
+        admin-user: "{{ .GRAFANA_ADMIN_USER }}"
+        admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
         ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_DBNAME: *dbName
