--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -17,33 +17,26 @@ spec:
     remediation:
       retries: 3
   values:
-    annotations:
-      secret.reloader.stakater.com/reload: &secret grafana-secret
-    extraInitContainers:
-      - name: 01-init-db
-        image: ghcr.io/home-operations/postgres-init:17
-        envFrom:
-          - secretRef:
-              name: *secret
+    deploymentStrategy:
+      type: Recreate
+    admin:
+      existingSecret: grafana-secret
     env:
       GF_DATE_FORMATS_USE_BROWSER_LOCALE: true
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
       GF_SERVER_ROOT_URL: https://grafana.${SECRET_DOMAIN}
-    envFromSecrets:
-      - name: *secret
-    admin:
-      existingSecret: *secret
     grafana.ini:
       analytics:
         check_for_updates: false
         check_for_plugin_updates: false
         reporting_enabled: false
-      auth.basic:
-        enabled: false
       auth.anonymous:
-        enabled: false
+        enabled: true
+        org_id: 1
+        org_name: Main Org.
+        org_role: Viewer
       news:
         news_feed_enabled: false
     dashboardProviders:
