--- a/kubernetes/apps/media/navidrome/app/helmrelease.yaml
+++ b/kubernetes/apps/media/navidrome/app/helmrelease.yaml
@@ -64,11 +64,11 @@ spec:
                 memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true # Disable during database upgrade.
+              # readOnlyRootFilesystem: true # Disable during database upgrade.
               capabilities: { drop: ["ALL"] }
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: true # Disable during database upgrade.
+        # runAsNonRoot: true # Disable during database upgrade.
         runAsUser: &uid 5000
         runAsGroup: *uid
         fsGroup: *uid
