--- a/kubernetes/apps/network/tailscale-operator/ks.yaml
+++ b/kubernetes/apps/network/tailscale-operator/ks.yaml
@@ -9,9 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: onepassword
-      namespace: security
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/network/tailscale-operator/app
   prune: true
@@ -28,7 +30,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app tailscale-connector
+  name: &app tailscale-connectors
   namespace: &namespace network
 spec:
   commonMetadata:
@@ -38,7 +40,7 @@ spec:
     - name: tailscale-operator
       namespace: network
   interval: 1h
-  path: ./kubernetes/apps/network/tailscale-operator/connector
+  path: ./kubernetes/apps/network/tailscale-operator/connectors
   prune: true
   retryInterval: 2m
   sourceRef:
