--- a/bootstrap/helmfile.d/01-apps.yaml
+++ b/bootstrap/helmfile.d/01-apps.yaml
@@ -33,7 +33,7 @@ releases:
       - kube-system/coredns
 
   - name: cert-manager
-    namespace: security
+    namespace: cert-manager
     chart: oci://quay.io/jetstack/charts/cert-manager
     version: v1.18.2
     values:
@@ -48,7 +48,7 @@ releases:
     values:
       - ./templates/values.yaml.gotmpl
     needs:
-      - security/cert-manager
+      - cert-manager/cert-manager
 
   - name: flux-instance
     namespace: flux-system
