--- a/kubernetes/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/kustomization.yaml
@@ -2,10 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: security
+namespace: cert-manager
 components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./external-secrets/ks.yaml
-  - ./onepassword/ks.yaml
+  - ./cert-manager/ks.yaml
