fix(cert-manager): correct certificate & secret names

--- a/kubernetes/apps/cert-manager/cert-manager/tls/certificate.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/tls/certificate.yaml
@@ -33,9 +33,9 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "pve-ipmi.${SECRET_DOMAIN/./-}"
+  name: "pve-ipmi-${SECRET_DOMAIN/./-}"
 spec:
-  secretName: "pve-ipmi.${SECRET_DOMAIN/./-}-tls"
+  secretName: "pve-ipmi-${SECRET_DOMAIN/./-}-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
