--- a/kubernetes/apps/external-secrets/onepassword/store/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/onepassword/store/clustersecretstore.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword.security.svc.cluster.local
+      connectHost: http://onepassword.external-secrets.svc.cluster.local
       vaults:
         Kubernetes: 1
       auth:
@@ -15,4 +15,4 @@ spec:
           connectTokenSecretRef:
             name: onepassword-secret
             key: token
-            namespace: security
+            namespace: external-secrets
