--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
         - name: TZ
           value: "${CONFIG_TIMEZONE}"
       extraArgs:
-        default-ssl-certificate: "security/${SECRET_DOMAIN/./-}-production-tls"
+        default-ssl-certificate: "cert-manager/${SECRET_DOMAIN/./-}-tls"
       ingressClassResource:
         controllerValue: k8s.io/internal
         default: true
