--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/helmrelease.yaml
@@ -50,7 +50,8 @@ spec:
         kind: ServiceAccount
         spec:
           spec:
-            roles: ["os:admin"]
+            roles:
+              - os:admin
     rbac:
       bindings:
         system-upgrade-controller:
