--- a/talos/patches/controller/api-access.yaml
+++ b/talos/patches/controller/api-access.yaml
@@ -6,4 +6,4 @@ machine:
         - os:admin
       allowedKubernetesNamespaces:
         - actions-runner-system
-        - system
+        - system-upgrade
