--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
@@ -5,8 +5,8 @@ kind: Plan
 metadata:
   name: kubernetes
 spec:
-  version: ${KUBERNETES_VERSION}
-  concurrency: 1
+  # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
+  version: v1.34.0
   exclusive: true
   serviceAccountName: system-upgrade-controller
   secrets:
@@ -18,7 +18,7 @@ spec:
       - key: node-role.kubernetes.io/control-plane
         operator: Exists
   upgrade:
-    image: ghcr.io/siderolabs/talosctl:${TALOS_VERSION}
+    image: ghcr.io/siderolabs/talosctl:v1.11.0
     args:
       - --nodes=$(SYSTEM_UPGRADE_NODE_NAME)
       - upgrade-k8s
@@ -30,7 +30,8 @@ kind: Plan
 metadata:
   name: talos
 spec:
-  version: ${TALOS_VERSION}
+  # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
+  version: v1.11.0
   concurrency: 1
   postCompleteDelay: 2m
   exclusive: true
