--- a/kubernetes/apps/volsync-system/volsync/app/prometheusrule.yaml
+++ b/kubernetes/apps/volsync-system/volsync/app/prometheusrule.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/monitoring.coreos.com/prometheusrule_v1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/prometheusrule_v1.json
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -9,21 +9,21 @@ spec:
     - name: volsync.rules
       rules:
         - alert: VolSyncComponentAbsent
+          expr: |-
+            absent(up{job="volsync-metrics"})
           annotations:
             summary: >-
               VolSync component has disappeared from Prometheus target discovery
-          expr: |-
-            absent(up{job="volsync-metrics"})
           for: 5m
           labels:
             severity: critical
 
         - alert: VolSyncVolumeOutOfSync
+          expr: |-
+            volsync_volume_out_of_sync == 1
           annotations:
             summary: >-
               {{ $labels.obj_namespace }}/{{ $labels.obj_name }} volume is out of sync
-          expr: |-
-            volsync_volume_out_of_sync{role="source"} == 1
           for: 5m
           labels:
             severity: critical
