chore(openebs): move to separate namespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
     "monitor": "folder_security",
     "monitoring": "folder_security",
     "observability": "folder_security",
+    "openebs-system": "folder_content",
     "security": "folder_admin",
     "self-hosted": "folder_public",
     "storage": "folder_content",
@@ -113,6 +114,7 @@
     "monitor": "event",
     "monitoring": "event",
     "observability": "event",
+    "openebs-system": "base",
     "security": "guard",
     "self-hosted": "home",
     "storage": "dump",
