--- a/kubernetes/apps/openebs-system/kustomization.yaml
+++ b/kubernetes/apps/openebs-system/kustomization.yaml
@@ -2,11 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: storage
+namespace: openebs-system
 components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  # - ./csi-driver-nfs/ks.yaml
-  - ./democratic-csi/ks.yaml
-  - ./minio/ks.yaml
+  - ./openebs/ks.yaml
