--- a/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       localpv:
         image:
           registry: quay.io/
-        basePath: &hostPath /var/mnt/extra/openebs/local
+        basePath: &hostPath /var/mnt/local-hostpath
         resources:
           requests:
             cpu: 10m
