--- a/kubernetes/apps/openebs-system/openebs/ks.yaml
+++ b/kubernetes/apps/openebs-system/openebs/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app openebs
-  namespace: &namespace storage
+  namespace: &namespace openebs-system
 spec:
   commonMetadata:
     labels:
@@ -15,7 +15,7 @@ spec:
       name: *app
       namespace: *namespace
   interval: 1h
-  path: ./kubernetes/apps/storage/openebs/app
+  path: ./kubernetes/apps/openebs-system/openebs/app
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -24,4 +24,3 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: false
