chore: move volsync & snapshot-controller to separate namespace

--- a/kubernetes/apps/self-hosted/dokuwiki/ks.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: democratic-csi-nfs
       namespace: storage
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 1h
   path: ./kubernetes/apps/self-hosted/dokuwiki/app
   postBuild:
