--- a/kubernetes/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: generic-device-plugin
       namespace: system
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 1h
   path: ./kubernetes/apps/downloads/qbittorrent/app
   postBuild:
