--- a/kubernetes/apps/media/prowlarr/ks.yaml
+++ b/kubernetes/apps/media/prowlarr/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: democratic-csi-nfs
       namespace: storage
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 1h
   path: ./kubernetes/apps/media/prowlarr/app
   postBuild:
