--- a/kubernetes/apps/self-hosted/karakeep/ks.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: democratic-csi-iscsi
       namespace: storage
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 1h
   path: ./kubernetes/apps/self-hosted/karakeep/app
   postBuild:
