--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: dragonfly-cluster
       namespace: database
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
   interval: 1h
   path: ./kubernetes/apps/self-hosted/nextcloud/app
   postBuild:
