chore(generic-device-plugin): move to kube-system namespace

--- a/kubernetes/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: democratic-csi-nfs
       namespace: storage
     - name: generic-device-plugin
-      namespace: system
+      namespace: kube-system
     - name: volsync
       namespace: volsync-system
   interval: 1h
