--- a/kubernetes/apps/kube-system/nvidia-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/nvidia-device-plugin/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
           - matchExpressions:
-            - key: nvidia.com/gpu.present
+            - key: gpu.home-ops/nvidia
               operator: In
               values:
                 - "true"
@@ -35,7 +35,7 @@ spec:
     nfd:
       enabled: false
     nodeSelector:
-        nvidia.com/gpu.present: "true"
+        gpu.home-ops/nvidia: "true"
     podAnnotations:
       configmap.reloader.stakater.com/reload: *configMap
     runtimeClassName: nvidia
