chore: replace nas ip with fqdn

--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
     persistence:
       backups:
         type: nfs
-        server: ${SECRET_NAS_IP}
+        server: nas.${SECRET_DOMAIN}
         path: ${SECRET_NFS_PATH_PGBACKUPS}
         globalMounts:
           - path: /backups
