--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -187,13 +187,13 @@ spec:
             readOnly: true
       data:
         type: nfs
-        server: ${SECRET_NAS_IP}
+        server: nas.${SECRET_DOMAIN}
         path: ${SECRET_NFS_PATH_IMMICH}
         globalMounts:
           - path: /data
       photos:
         type: nfs
-        server: ${SECRET_NAS_IP}
+        server: nas.${SECRET_DOMAIN}
         path: ${SECRET_NFS_PATH_PHOTOS}
         globalMounts:
           - path: /photos
