--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -88,7 +88,7 @@ spec:
           - path: /etc/yt-dlp
       downloads:
         type: nfs
-        server: ${SECRET_NAS_IP}
+        server: nas.${SECRET_DOMAIN}
         path: ${SECRET_NFS_PATH_MEDIA}
         globalMounts:
           - path: /downloads
