chore(dcsi): replace nas ip with fqdn & re-enable deployment

--- a/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
@@ -30,7 +30,7 @@ spec:
             zvolEnableReservation: false
             zvolBlocksize: 16K
           iscsi:
-            targetPortal: "${SECRET_NAS_IP}:3260"
+            targetPortal: "nas.${SECRET_DOMAIN}:3260"
             nameTemplate: "{{`{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}`}}-{{`{{ parameters.[csi.storage.k8s.io/pvc/name] }}`}}"
             namePrefix: ""
             nameSuffix: ""
