--- a/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/externalsecret.yaml
@@ -32,10 +32,10 @@ spec:
             datasetPermissionsGroup: ${CONFIG_APP_GID}
           nfs:
             shareCommentTemplate: "{{`{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}`}}-{{`{{ parameters.[csi.storage.k8s.io/pvc/name] }}`}}"
-            shareHost: ${SECRET_NAS_IP}
+            shareHost: nas.${SECRET_DOMAIN}
             shareAlldirs: false
             shareAllowedHosts: []
-            shareAllowedNetworks: [${NET_STORAGE_CIDR}]
+            shareAllowedNetworks: [${NET_LOCAL_CIDR}]
             shareMaprootUser: ""
             shareMaprootGroup: ""
             shareMapallUser: ${CONFIG_APP_USER}
